[project]
name = "rhesis-chatbot"
version = "1.0.0"
description = "Default insurance chatbot (Rosalind) for new user onboarding"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.116.1",
    "uvicorn>=0.35.0",
    "gunicorn>=21.2.0",
    "slowapi>=0.1.9",
    "pydantic>=2.11.7",
    "python-dotenv>=1.2.2",
    "redis>=5.0.0",
    "rhesis-sdk",
]

[dependency-groups]
dev = [
    "streamlit>=1.41.1",
]

[tool.uv]
exclude-newer = "1 week"
exclude-newer-package = { pydantic-settings = false, langsmith = false, langchain = false, langchain-core = false, litellm = false, aiohttp = false, tornado = false, starlette = false, pyjwt = false, pyarrow = false, cryptography = false, python-multipart = false }
# Force minimum versions for transitive dependencies with security advisories
constraint-dependencies = [
    "pyasn1>=0.6.4",
    "orjson>=3.11.7",
    "tornado>=6.5.7",
    "gitpython>=3.1.52",
    "langchain-core>=1.3.3",
    "langchain-classic>=1.0.7",
    "langsmith>=0.8.18",
    "urllib3>=2.7.0",
    "idna>=3.15",
    "python-multipart>=0.0.31",
    "starlette>=1.3.1",
    "pyjwt>=2.13.0",
    "aiohttp>=3.14.1",
    "cryptography>=48.0.1",
    "pyarrow>=23.0.1",
    "litellm>=1.84.0",
    "pydantic-settings>=2.14.2",
    "setuptools>=83.0.0",
    "soupsieve>=2.8.4",
    "langchain>=1.3.9",
    "langgraph-checkpoint>=4.1.1",
    "langgraph-sdk>=0.3.15",
    "mcp>=1.28.1",
    "pillow>=12.3.0",
]
# Match sdk lock resolution: litellm>=1.83.7 vs deepeval/python-dotenv.
override-dependencies = [
    "python-dotenv>=1.2.2",
    "pydantic>=2.13.0",
    "openai>=2.26.0",
]

[tool.uv.sources.rhesis-sdk]
path = "../../sdk"
editable = true

