[project]
name = "polyphemus"
version = "0.2.6"
requires-python = ">=3.10"
dependencies = [
    # FastAPI and server dependencies
    "fastapi>=0.100.0",
    "uvicorn[standard]>=0.23.0",
    "gunicorn>=21.0.0",
    
    # HTTP client for Vertex AI calls
    "httpx>=0.27.0",
    
    # Database dependencies (for auth/rate limiting)
    "sqlalchemy>=2.0.0",
    "psycopg2-binary>=2.9.0",
    "python-dotenv>=1.0.0",
    
    # Backend dependency (for auth models and rate limiting - without GPU)
    "rhesis-backend",
    
    # Vertex AI endpoint calls (Application Default Credentials)
    "google-auth>=2.0.0",
]

[project.optional-dependencies]
# Optional: Perspective API for toxicity evaluation
toxicity = [
    "google-api-python-client",
]
# Optional: Vertex AI model deployment (for model_deployment/ scripts)
vertex-ai = [
    "google-cloud-aiplatform>=1.38.0",
    "google-cloud-compute>=1.15.0",
    "google-api-core>=2.15.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/rhesis"]

[tool.uv.sources.rhesis-sdk]
path = "../../sdk"
editable = true

[tool.uv.sources.rhesis-penelope]
path = "../../penelope"
editable = true

[tool.uv.sources.rhesis-backend]
path = "../backend"
editable = true
