[project]
name = "polyphemus"
version = "0.2.9"
requires-python = ">=3.12"
dependencies = [
    # FastAPI and server dependencies
    "fastapi>=0.100.0",
    "uvicorn[standard]>=0.23.0",
    "gunicorn>=21.0.0",
    
    # HTTP client for Vertex AI calls
    "httpx>=0.27.0",
    
    # Database dependencies (for auth/rate limiting)
    "sqlalchemy>=2.0.0",
    "psycopg2-binary>=2.9.0",
    "python-dotenv>=1.0.0",
    
    # Backend dependency (for auth models and rate limiting - without GPU)
    "rhesis-backend",
    
    # Vertex AI endpoint calls (Application Default Credentials)
    "google-auth>=2.0.0",
]

[project.optional-dependencies]
# Optional: Perspective API for toxicity evaluation
toxicity = [
    "google-api-python-client",
]
# Optional: Vertex AI model deployment (for model_deployment/ scripts)
vertex-ai = [
    "google-cloud-aiplatform>=1.38.0",
    "google-cloud-compute>=1.15.0",
    "google-api-core>=2.15.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/rhesis"]

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "httpx>=0.27.0",
]

# Pytest config used when running from apps/polyphemus (e.g. uv run pytest).
# Repo-root runs use tests/pytest.ini instead.
[tool.pytest.ini_options]
testpaths = ["../../tests/polyphemus"]
pythonpath = ["src"]
asyncio_mode = "auto"

[tool.uv]
# Force minimum versions for transitive dependencies with security advisories
constraint-dependencies = [
    "pyasn1>=0.6.3",
    "orjson>=3.11.7",
    "tornado>=6.5.5",
]
# garak>=0.14.0 declares datasets<4.0 but ragas (via rhesis-sdk) requires
# datasets>=4.0.0.  This override keeps both packages compatible, matching
# the same override already present in apps/backend/pyproject.toml.
override-dependencies = [
    "datasets>=4.0.0",
]

[tool.uv.sources.rhesis-sdk]
path = "../../sdk"
editable = true

[tool.uv.sources.rhesis-penelope]
path = "../../penelope"
editable = true

[tool.uv.sources.rhesis-backend]
path = "../backend"
editable = true
