[project]
name = "rhesis-telemetry-examples"
version = "0.1.0"
description = "Telemetry examples for Rhesis SDK"
requires-python = ">=3.12"
dependencies = [
    "rhesis-sdk",
    "python-dotenv>=1.0.0",
]

[project.optional-dependencies]
langchain = [
    "langchain>=1.0.0",
    "langchain-core>=1.2.11",
    "langchain-google-genai>=2.0.0",
]
fastapi = [
    "fastapi>=0.104.0",
    "uvicorn[standard]>=0.24.0",
]
langgraph = [
    "langgraph>=0.0.26",
    "langchain>=0.1.0",
    "langchain-core>=1.2.11",
]

[tool.uv]
exclude-newer = "1 week"
# Force minimum versions for transitive dependencies with security advisories
constraint-dependencies = [
    "pyasn1>=0.6.3",
    "orjson>=3.11.7",
    "tornado>=6.5.5",
]

[tool.uv.sources]
rhesis-sdk = { path = "../../sdk", editable = true }

