[project]
name = "rhesis-telemetry-examples"
version = "0.1.0"
description = "Telemetry examples for Rhesis SDK"
requires-python = ">=3.12"
dependencies = [
    "rhesis-sdk",
    "python-dotenv>=1.0.0",
]

[project.optional-dependencies]
langchain = [
    "langchain>=1.0.0",
    "langchain-core>=1.3.3",
    "langchain-google-genai>=2.0.0",
]
fastapi = [
    "fastapi>=0.104.0",
    "uvicorn[standard]>=0.24.0",
]
langgraph = [
    "langgraph>=0.0.26",
    "langchain>=0.1.0",
    "langchain-core>=1.3.3",
]
openai-sdk = [
    "anthropic>=0.40.0",
    "openai>=1.0.0",
]
pydantic-ai = [
    "pydantic-ai>=1.31.0",
]
llamaindex = [
    "llama-index-core>=0.12.0",
    "llama-index-embeddings-google-genai>=0.5.0",
    "llama-index-embeddings-openai>=0.3.0",
    "llama-index-llms-google-genai>=0.5.0",
    "llama-index-llms-openai>=0.3.0",
]
crewai = [
    "crewai[google-genai]>=0.108.0",
]
haystack = [
    "haystack-ai>=2.0.0",
]

[tool.uv]
exclude-newer = "1 week"
# Force minimum versions for transitive dependencies with security advisories
constraint-dependencies = [
    "pyasn1>=0.6.3",
    "orjson>=3.11.7",
    "tornado>=6.5.5",
    "aiohttp>=3.13.3",
    "langchain-openai>=1.1.14",
    "gitpython>=3.1.50",
    "langchain-core>=1.3.3",
    "langchain-classic>=1.0.7",
    "langsmith>=0.8.0",
    "urllib3>=2.7.0",
    "idna>=3.15",
    "python-multipart>=0.0.27",
]
override-dependencies = [
    "python-dotenv>=1.2.2",
    "pydantic>=2.13.0",
    "openai>=2.26.0",
]

[tool.uv.sources]
rhesis-sdk = { path = "../../sdk", editable = true }
